--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,19 @@
 .list-unstyled {
     list-style: none;
 }
+
+.contacts-qr-code {
+    width: 120px;
+}
+
+@media (min-width: 768px) {
+    .contacts-qr-code {
+        width: 160px;
+    }
+}
+
+@media (min-width: 992px) {
+    .contacts-qr-code {
+        width: 180px;
+    }
+}
