--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1170,7 +1170,7 @@ footer > div {max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
 
 .mPriceTitle {display: none;}
 
-.innerPageContent {margin-top: -25px; min-height: 500px;}
+.innerPageContent {margin-top: -25px;}
 
 .blog {display: flex; flex-wrap: wrap; justify-content: space-between;}
 .blog a {width: 49%; display: flex; border: 1px solid #ddd; border-radius: 10px; padding: 20px; align-items: end; margin-bottom: 20px;}
@@ -1304,7 +1304,7 @@ table tr td,
 	.faq button[type="submit"] {
     margin: 20px 0 0!important;
 }
-	
+
 	.mapMain {height: 300px;}
 	.map {margin: 0!important;}
 	.wrmap {padding: 20px;}
