--- a/resources/css/origin/styles.css
+++ b/resources/css/origin/styles.css
@@ -427,7 +427,7 @@ footer > div {max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
 
 .mPriceTitle {display: none;}
 
-.innerPageContent {margin-top: -25px; min-height: 500px;}
+.innerPageContent {margin-top: -25px;}
 
 .blog {display: -webkit-box;display: -webkit-flex;display: -moz-box;display: -ms-flexbox;display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: justify; -webkit-justify-content: space-between; -moz-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between;}
 .blog a {width: 49%; display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; border: 1px solid #ddd; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; padding: 20px; -webkit-box-align: end; -webkit-align-items: end; -moz-box-align: end; -ms-flex-align: end; align-items: end; margin-bottom: 20px;}
@@ -564,7 +564,7 @@ table tr td,
 	.faq button[type="submit"] {
     margin: 20px 0 0!important;
 }
-	
+
 	.mapMain {height: 300px;}
 	.map {margin: 0!important;}
 	.wrmap {padding: 20px;}
