--- a/resources/css/origin/styles.css
+++ b/resources/css/origin/styles.css
@@ -455,7 +455,7 @@ footer > div {max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
 .mainInfoCont {border: 2px solid #ecf9ee; padding: 20px 25px; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;}
 .mainInfoCont h2 {font-size: 20px; margin-bottom: 20px;}
 
-.ulcont {list-style: none;}
+.ulcont {list-style: none; filter: grayscale(1)}
 .ulcont li {display: -webkit-box;display: -webkit-flex;display: -moz-box;display: -ms-flexbox;display: flex; -webkit-box-align: center; -webkit-align-items: center; -moz-box-align: center; -ms-flex-align: center; align-items: center; margin-bottom: 14px; font-weight: 500;}
 .ulcont li .icoimg {background: #ecf9ee; width: 45px; min-width: 45px; height: 45px; -webkit-border-radius: 100%; -moz-border-radius: 100%; border-radius: 100%; display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -moz-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -moz-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-right: 15px;}
 .ulcont li .icoimg img {width: 24px;}
