restore images & hide make offer button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -693,7 +693,7 @@ input[type='submit'].styler[disabled] {
 }
 
 .brands-carousel .brands-carousel-container {
-    background: #e6edf8;
+    background: #e8f8e6;
     border-radius: 7px;
     padding: 20px 50px 10px;
 }
