--- a/resources/css/origin/seonity.css
+++ b/resources/css/origin/seonity.css
@@ -6,7 +6,7 @@
 }
 
 .brands-carousel .brands-carousel-container {
-    background: #e8f8e6;
+    background: #f3ebda;
     border-radius: 7px;
     padding: 20px 50px 10px;
 }
